<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.BookingStatus">

    <RelativeLayout
        android:id="@+id/rl_toolbar_booking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP60">

        <ImageView
            android:id="@+id/img_close_boooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_red_24dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/DP15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/booking_status"
            android:textSize="@dimen/SP18"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/img_close_boooking"
            android:layout_toEndOf="@+id/img_close_boooking" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_booking_detail"
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_toolbar_booking"
        android:background="@color/green"
        android:layout_height="@dimen/DP150">

        <ImageView
            android:layout_width="@dimen/DP100"
            android:layout_height="@dimen/DP100"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/DP10"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logo"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txt_amount_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/DP15"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="@dimen/SP20"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_booking_detail"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/DP15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:textSize="@dimen/SP25"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed"
            android:textSize="@dimen/SP20"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="@dimen/DP100"
            android:layout_height="@dimen/DP100"
            android:padding="@dimen/DP15"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/food"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_delivery"
            android:textSize="@dimen/SP20"
            android:padding="@dimen/SP20"
            android:textColor="@color/green"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:textSize="@dimen/SP20"
            android:padding="@dimen/SP20"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/DP50"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>