<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_margin="@dimen/DP5"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_item_most"
        android:layout_width="@dimen/DP100"
        android:layout_height="@dimen/DP100"
        android:scaleType="centerCrop"
        android:src="@drawable/item"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_toRightOf="@+id/img_item_most"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.30"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/DP8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_item_type"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="@dimen/DP5"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/veg"/>

                <TextView
                    android:id="@+id/txt_name_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:textSize="@dimen/SP14"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/DP10"
                android:paddingLeft="@dimen/DP10"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/SP15"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_most"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/add_button_background"
            android:layout_weight="0.70"
            android:text="@string/add"
            android:textSize="@dimen/SP13"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

        <LinearLayout
            android:id="@+id/ln_cart_plusminus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP35"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/add_button_background"
            android:layout_gravity="center_vertical"
            android:weightSum="1"
            android:padding="@dimen/DP2"
            android:layout_weight="0.70">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/mius"
                android:textColor="@color/black"
                android:layout_weight="0.33"/>

            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="match_parent"
                android:layout_weight="0.33"
                android:text="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@color/light_gray"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_weight="0.33"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>