<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardview_menu"
    android:padding="@dimen/DP2"
    android:background="@color/white"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/DP4"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/DP5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_item_type"
                        android:layout_width="18dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/veg"
                        android:padding="@dimen/DP3"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/txt_name_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item"
                        android:textSize="@dimen/SP14"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_price_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SP15"
                    android:paddingLeft="@dimen/DP10"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_item"
                android:layout_width="match_parent"
                android:layout_weight="0.70"
                android:text="@string/add"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:layout_height="@dimen/DP35"
                android:background="@drawable/add_button_background"/>

                <LinearLayout
                    android:id="@+id/ln_cart_plusminus"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DP35"
                    android:background="@drawable/add_button_background"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:visibility="gone"
                    android:padding="2dp"
                    android:layout_weight="0.80">

                    <Button
                        android:id="@+id/btn_minus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:text="@string/mius"
                        android:textColor="@color/black"

                        android:layout_weight="0.33"/>

                    <TextView
                        android:id="@+id/txt_quantity"
                        android:layout_width="match_parent"
                        android:layout_weight="0.33"
                        android:text="0"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:background="@color/light_gray"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btn_plus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/plus"
                        android:textColor="@color/black"
                        android:background="@color/white"
                        android:layout_weight="0.33"/>

                </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_description_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center_vertical"
            android:padding="@dimen/DP12"
            android:lines="2"
            android:textSize="@dimen/SP10"
            android:textColor="@color/text_gray"
            android:textAllCaps="true"
            tools:ignore="RtlSymmetry"/>


    </LinearLayout>

</LinearLayout>