<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardview_transaction"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp"
    card_view:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/SP8"
        android:paddingRight="@dimen/DP5"
        android:paddingLeft="@dimen/DP5"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rl_back"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/SP14"
                android:visibility="gone"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/close"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:padding="@dimen/DP10"
                android:src="@drawable/ic_cancel_red_24dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DP5"
            android:paddingLeft="@dimen/SP8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_toLeftOf="@+id/btn_add_cart"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_add_cart"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/txt_offer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SP16"
                    android:text="@string/app_name"/>

                <TextView
                    android:id="@+id/txt_price_offer"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/SP20"
                    android:textColor="@color/blue"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cart"
                android:textSize="@dimen/SP15"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:background="@drawable/add_button_background"
                android:padding="@dimen/DP10"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_offer_details"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/DP4"
            android:padding="@dimen/DP5"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.cardview.widget.CardView>